--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Will’s Inventory
 repotitle: Will’s Inventory
 author: Will (WHASonYT#5995)
 url: https://willm.ga
-favicon: https://cdn.discordapp.com/attachments/385252858028621824/403722101661368324/UKTV_channel_W_logo.png
+favicon: https://vignette.wikia.nocookie.net/eastenders/images/9/92/UKTV_channel_W_logo.png
